Rest service for encrypted text implemented
